
syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package managarm.hwctrl;

enum Error {
	SUCCESS = 0;
}

enum CntReqType {
	CONFIGURE_IRQ = 1;
}

enum TriggerMode {
	EDGE_TRIGGERED = 1;
	LEVEL_TRIGGERED = 2;
}

enum Polarity {
	HIGH = 1;
	LOW = 2;
}

message CntRequest {
	optional CntReqType req_type = 1;
	optional int64 number = 2;
	optional TriggerMode trigger_mode = 3;
	optional Polarity polarity = 4;
}

message SvrResponse {
	optional int32 error = 1;
}

